# bathhouse-booking

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  check_fixes.py  docker-compose.yml  pyproject.toml  pytest.ini
bathhouse_booking/bookings/: admin.py  config_init.py  models.py  notifications.py  services.py
bathhouse_booking/bookings/migrations/: 0001_initial.py  0002_alter_client_phone_alter_client_telegram_id.py  0003_notificationqueue.py
bathhouse_booking/bookings/tests/: test_admin.py  test_all_fixes_final.py  test_booking_clean.py  test_booking_limit.py  test_error_handling.py  test_final_verification.py  test_free_intervals.py  test_free_intervals_simple.py  test_models.py  test_new_schedule_format.py  test_schedule_bug.py  test_schedule_fix.py  test_schedule_format.py  test_schedule_simple.py  test_services.py  test_services_integration.py  test_timezone.py
bathhouse_booking/bot/: apps.py  calendar_utils.py  dependencies.py  error_handlers.py  keyboards.py  main.py  routers.py  states.py
bathhouse_booking/bot/handlers/: admin.py  booking.py  message_admin.py  my_bookings.py  phone.py  start.py
bathhouse_booking/bot/middleware/: session_timeout.py
bathhouse_booking/bot/tests/: test_admin_command.py  test_booking_calendar.py  test_booking_flow.py  test_bot_launch.py  test_buttons.py  test_error_handling.py  test_handlers.py  test_imports.py  test_my_bookings.py  test_structure.py  (+1 more)
bathhouse_booking/config/: settings.py  urls.py
scripts/: deploy.sh
specs/: specs_agent_tasks.md  specs_mvp_tasks.md
tests/: test_django.py  test_smoke.py
(+1 files in other folders)
